style.css
/* ... */
.project-page-heading {
  color: #000;
  font-family: Gilroy, Arial, sans-serif;
  font-size: 60px;
  font-weight: 700;
  line-height: 70px;
}

.project-page-heading.about-heading {
  color: #000;
  max-width: 370px;
  margin-top: 20px;
  margin-bottom: 70px;
  font-family: Gilroy, Arial, sans-serif;
  font-weight: 700;
  line-height: 60px;
}

.project-page-heading.contact-adress {
  color: var(--white);
  min-width: auto;
  max-width: 500px;
}

.title-small {
  font-family: Gilroy, Arial, sans-serif;
  font-size: 32px;
  font-weight: 700;
  line-height: 100%;
}

.title-small.contact-adress {
  color: var(--white);
  max-width: 350px;
}

.title-small.contact-adress.contact-num {
  margin-top: 60px;
  margin-bottom: 0;
}

.title-small.contact-headline {
  color: var(--white);
  max-width: 550px;
  margin-bottom: 50px;
  line-height: 45px;
}

.title-small.contact-headline.contact-num {
  margin-top: 60px;
  margin-bottom: 0;
}

.title-xsmall {
  font-family: Gilroy, Arial, sans-serif;
  font-size: 25px;
  font-weight: 700;
}

.title-xsmall.about-quote-role {
  color: var(--white);
  margin-left: 80px;
}

.small-text {
  font-family: Gilroy, Arial, sans-serif;
  font-size: 20px;
  font-weight: 700;
}

.small-text.header-link {
  color: var(--white);
  position: absolute;
  bottom: 40px;
}

.p {
  color: #000;
  font-family: Open Sans, sans-serif;
  font-size: 16px;
  line-height: 150%;
}

.p.about-p {
  color: var(--gray-dark);
  max-width: 450px;
  margin-bottom: 40px;
  line-height: 26px;
}

.p.about-p.contact-p {
  color: var(--gray-light);
  max-width: 370px;
  margin-top: 20px;
  margin-bottom: 60px;
}

.p.about-p.cookies-desc {
  margin-top: 10px;
}

.p.about-p-details {
  color: var(--gray-dark);
  text-transform: uppercase;
  max-width: 450px;
  margin-bottom: 40px;
  font-family: Gilroy, Arial, sans-serif;
  font-weight: 600;
  line-height: 40px;
}

.p.testamonial-desc {
  color: var(--gray-dark);
  max-width: 450px;
  margin-bottom: 40px;
  line-height: 26px;
}

.p.nav-cred.footer-link.webflow-footer {
  margin-top: 15px;
}

.p.footer-link {
  transition: all 0.15s;
}

.p.footer-link:hover {
  color: var(--primary-hover);
}

.stylesheet-colors {
  grid-column-gap: 27px;
  grid-row-gap: 27px;
  margin-top: 50px;
  display: flex;
}

.color1 {
  background-color: var(--black);
  color: var(--black);
  width: 100px;
  height: 100px;
}

.color2 {
  background-color: var(--primary);
  color: var(--black);
  width: 100px;
  height: 100px;
}

.color3 {
  background-color: var(--gray-dark);
  color: var(--black);
  width: 100px;
  height: 100px;
}

.color4 {
  background-color: var(--gray-light);
  color: var(--black);
  width: 100px;
  height: 100px;
}

.nav-container {
  flex-flow: row;
  justify-content: space-between;
  align-items: center;
  padding-left: 0;
  padding-right: 0;
  display: flex;
  position: relative;
}

.nav {
  background-color: var(--transparent);
  color: #000;
  padding-top: 20px;
  padding-bottom: 20px;
}

.nav-logo {
  width: 130px;
}

.image {
  opacity: 1;
}

.header-container {
  z-index: 10;
  max-width: var(--container-width);
  flex-flow: column;
  justify-content: flex-start;
  align-items: flex-start;
  width: 100%;
  height: 510px;
  padding-left: 100px;
  padding-right: 100px;
  display: flex;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.header-bg-image {
  z-index: 0;
  filter: brightness(46%);
  vertical-align: top;
  width: 100%;
  height: 100%;
  position: relative;
}

.text-span {
  color: var(--primary);
  line-height: 80px;
}

.desc.desc-light {
  color: var(--white);
}

.header-content-wrapper {
  height: 100%;
  padding-top: 40px;
  padding-bottom: 40px;
  padding-left: 40px;
  position: relative;
}

.header-content-yellow-outline {
  z-index: -1;
  border-top: 4px solid var(--primary);
  border-bottom: 4px solid var(--primary);
  border-left: 4px solid var(--primary);
  color: #000;
  width: 55%;
  max-width: 160px;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
}

.header-project-track {
  z-index: 1000000;
  background-color: var(--white);
  color: #000;
  width: 100%;
  height: 100%;
  position: absolute;
  inset: 0%;
}

.header-track {
  z-index: 999;
  background-color: var(--white);
  justify-content: space-around;
  align-items: stretch;
  width: 50%;
  height: 150px;
  padding-left: 10px;
  padding-right: 10px;
  display: flex;
  position: relative;
  bottom: 0;
  right: auto;
}

.header-trakc_item {
  grid-column-gap: 20px;
  grid-row-gap: 20px;
  justify-content: center;
  align-items: center;
  padding-top: 0;
  padding-left: 10px;
  padding-right: 10px;
  display: flex;
  position: relative;
}

.heading-track_item-num {
  font-family: Gilroy, Arial, sans-serif;
  font-size: 55px;
  font-weight: 700;
  transition: 100ms all ease;
}

.heading-track_item-num.heading-track_item-num_active {
  color: var(--primary);
  font-size: 55px;
}

.heading-track_item-text {
  max-width: 90px;
  font-family: Gilroy, Arial, sans-serif;
  font-size: 16px;
  font-weight: 700;
  line-height: 26px;
}

.testsec {
  background-color: var(--gray-dark);
  height: 100vh;
}

.header-wrapper {
  width: 100%;
  max-width: 1800px;
  height: 100vh;
  overflow: hidden;
  position: relative;
}

.header-background-image {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  width: 100%;
  height: 100%;
  object-fit: cover;
  opacity: 1;

  z-index: -1;
}

/* Opcionalno: Dodajte animaciju za sliku da se postepeno pojavljuje */
.header-wrapper img {
  opacity: 1;
  transition: opacity 0.8s ease-in-out;
}

.header-wrapper:hover .header-background-image {
  opacity: 1;  /* Ako želite da slika postane vidljiva pri hover-u */
}

.header-wrapper.changed::before {
  opacity: 1;
}

.header-track-wrapper {
  justify-content: flex-end;
  align-items: center;
  width: 91.8%;
  height: 150px;
  display: flex;
  position: absolute;
  bottom: 0;
  right: 0;
}
/* ... */

